overflow fix

--- a/src/components/flexy.ss.css
+++ b/src/components/flexy.ss.css
@@ -212,7 +212,7 @@ nav{
 @media screen and (max-width:768px){
 
     body{
-        overflow-y: hidden;
+        overflow-y: scroll;
     }
 
     .nav-links{
